--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+       
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -92,7 +92,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>Tahseel Zila Lodhran</p>
+                  <p>Tahseel Distric Lodhran</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -100,7 +100,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>0304-1816918</p>
+                  <p>0349-9491778</p>
                 </div>
               </div><!-- End Info Item -->
 
