--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>I am always open  to new oppurtunities and collaborations Feel free to reach out for any inquiries,partnership,or project discussion.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
